--- a/notes/base_graphics.rmd
+++ b/notes/base_graphics.rmd
@@ -1,6 +1,8 @@
 ---
 title: "Introduction to Base Graphics in R"
-format: revealjs
+format:
+  revealjs:
+    self-contained: true
 editor: visual
 ---
 <style>
