--- a/notes/GenomicRanges.rmd
+++ b/notes/GenomicRanges.rmd
@@ -42,13 +42,81 @@ While Biostrings handles sequence data (DNA, RNA, protein sequences), GenomicRan
 
 ## Loading the GenomicRanges Package
 ```{r}
-#| echo: true
-#| include: true
+#| echo: false
+#| include: false
 #| results: hide
 #| message: false
 # Load the GenomicRanges package
 library(GenomicRanges)
 library(Biostrings)
+library(Gviz)
+library(trackViewer)
+
+plotGenomicTracks <- function(tracks_list,
+                              colors     = NULL,
+                              chromosome = NULL,
+                              from       = NULL,
+                              to         = NULL) {
+  # Validate inputs
+  n <- length(tracks_list)
+  if (is.null(names(tracks_list)) || any(names(tracks_list) == "")) {
+    stop("tracks_list must be a named list (names used as track titles).")
+  }
+  if (!is.null(colors) && length(colors) != n) {
+    stop("If colors is provided, its length must equal number of tracks.")
+  }
+
+  # Default colors to gray
+  if (is.null(colors)) {
+    colors <- rep("gray", n)
+  }
+
+  # Build AnnotationTrack for each element, adding feature IDs only if defined
+  annotation_tracks <- mapply(function(gr, col, nm) {
+    # Prepare base arguments
+    args <- list(
+      range    = gr,
+      name     = nm,
+      fill     = col,
+      col      = "black",      # border color
+      stacking = "dense"       # compact stacking
+    )
+    # Add feature IDs if 'id' metadata column exists and is non-empty
+    if ("id" %in% names(mcols(gr))) {
+      ids <- mcols(gr)$id
+      if (!all(is.na(ids)) && length(ids) == length(gr)) {
+        args$showFeatureId     <- TRUE
+        args$featureAnnotation <- "id"
+        # Optionally customize label appearance
+        args$fontcolor.feature <- "black"
+      }
+    }
+    do.call(AnnotationTrack, args)
+  },
+  gr  = tracks_list,
+  col = colors,
+  nm  = names(tracks_list),
+  SIMPLIFY = FALSE)
+
+  # Add genome axis
+  axis_track <- GenomeAxisTrack()
+
+  # Combine and plot
+  all_tracks <- c(list(axis_track), annotation_tracks)
+  plotTracks(all_tracks,
+             chromosome       = chromosome,
+             from             = from,
+             to               = to,
+             background.panel = "#FFFEDB",    # subtle background
+             col.axis         = "black",
+             cex.title        = 0.8,
+             extend.left      = 5,
+             extend.right     = 5)
+
+  invisible(annotation_tracks)
+}
+
+
 ```
 
 ## Creating GRanges Objects
@@ -132,30 +200,40 @@ gr[seqnames(gr) == "chr2" & strand(gr) == "+"]
 #| include: true
 # Shift ranges by 5 base pairs  (--> start + 5, end + 5)
 shift(gr, 5)
+plotGenomicTracks(list(gr=gr, shifted=shift(gr, 5)))
+
 
 # Resize ranges to a width of 10 bp (start is unchanged - default)
 resize(gr, width = 10)
+plotGenomicTracks(list(gr=gr, resized=resize(gr, width = 10)))
 
 # Resize ranges to a width of 10 bp, anchoring at the start
 resize(gr, width = 10, fix = "start")
+plotGenomicTracks(list(gr=gr, resized=resize(gr, width = 10, fix = "start")))
 
 # Resize ranges to a width of 10 bp, anchoring at the end
 resize(gr, width = 10, fix = "end")
+plotGenomicTracks(list(gr=gr, resized=resize(gr, width = 10, fix = "end")))
 
 # Narrow ranges by trimming from both ends
 narrow(gr, start = 2, end = -2)
+plotGenomicTracks(list(gr=gr, narrow=narrow(gr, start = 2, end = -2)))
 
-# Expand ranges by 5 bp on each side
+# Expand ranges by 5 bp on each side of the start coordinate
 flank(gr, width = 5, both = TRUE)
+plotGenomicTracks(list(gr=gr, expanded=flank(gr, width = 5, both = TRUE)))
 
 # Get the 5' flanking region
 flank(gr, width = 5, start = TRUE)
+plotGenomicTracks(list(gr=gr, five_prime_flank=flank(gr, width = 5, start = TRUE)))
 
 # Get the 3' flanking region
 flank(gr, width = 5, start = FALSE)
+plotGenomicTracks(list(gr=gr, three_prime_flank=flank(gr, width = 5, start = FALSE)))
 
 # Restrict ranges to a specific region (e.g., positions 15 to 30)
 restrict(gr, start = 15, end = 30)
+plotGenomicTracks(list(gr=gr, restricted=restrict(gr, start = 15, end = 30)))
 ```
 
 # Interval Operations
@@ -174,8 +252,9 @@ The **GenomicRanges**  package provides efficient containers and methods for rep
 #| echo: true
 #| include: true
 # Create a second GRanges object
-gr1 <- GRanges("chr1", IRanges(c(5, 80, 329), width=20))
-gr2 <- GRanges("chr1", IRanges(c(10, 100, 300), width=15))
+gr1 <- GRanges("chr1", IRanges(c(5, 80, 329), width=20), id=1:3)
+gr2 <- GRanges("chr1", IRanges(c(10, 100, 300), width=15), id=1:3)
+plotGenomicTracks(list(gr1=gr1, gr2=gr2))
 
 # Find all overlapping pairs
 hits <- findOverlaps(gr1, gr2)
@@ -197,16 +276,14 @@ counts
 
 gr1_overlapping <- subsetByOverlaps(gr1, gr2)
 gr1_overlapping
+plotGenomicTracks(list(gr1=gr1, gr2=gr2, gr1_overlapping=gr1_overlapping))
 
+# pairwise overlap comparison
 has_overlap <- overlapsAny(gr1, gr2)
 has_overlap
+plotGenomicTracks(list(gr1=gr1, gr2=gr2))
 
-gr2 <- GRanges(
-  seqnames = c("chr1", "chr2", "chr3"),
-  ranges = IRanges(start = c(15, 18, 25), end = c(22, 28, 35)),
-  strand = c("+", "+", "-"),
-  name = c("A", "B", "C")
-)
+
 
 ```
 
@@ -229,25 +306,65 @@ The `distance(x, y)` function computes the signed distance between each range in
 # Find the nearest range in gr2 for each range in gr
 
 query   <- GRanges("chr1", IRanges(c(10, 20, 50), width=5))
-subject <- GRanges("chr1", IRanges(c(1, 15, 40, 60), width=5))
+subject <- GRanges("chr1", IRanges(c(1, 15, 40, 70), width=5))
 
 # Find nearest subject range for each query range
 hits_nearest <- nearest(query, subject)
 hits_nearest
+plotGenomicTracks(list(query=query, subject=subject))
 distances <- distance(query, subject[1:3])
 distances
 
-# Find preceding subject range for each query range
+# Find preceding subject range for each query range - look for downstream neighbors
 hits_precede <- precede(query, subject)
 hits_precede
 
-hits_precede2 <- precede(gr2, gr)
-hits_precede2
 
-# Find the following range
+
+# Find the following range - look for upstream neighbors
+hits_follow <- follow(query, subject)
+hits_follow
+
+
+# more examples
+subject <- GRanges(
+  seqnames = "chr1",
+  ranges   = IRanges(start = c(5, 20, 40), width = 5),
+  strand   = c("+", "-", "+"),
+  id = 1:3
+)
+# Query: 4 ranges on chr1 with mixed strands
+query <- GRanges(
+  seqnames = "chr1",
+  ranges   = IRanges(start = c(1, 15, 30, 50), width = 5),
+  strand   = c("+", "-", "*", "-"),
+  id = 1:4
+)
+plotGenomicTracks(list(query=query, subject=subject))
+hits_precede <- precede(query, subject)
+hits_precede
 hits_follow <- follow(query, subject)
 hits_follow
 ```
+Orientation and strand for precede and follow: Orientation is 5’ to 3’, consistent with the direction of translation. Because positional numbering along a chromosome is from left to right
+and transcription takes place from 5’ to 3’, precede and follow can appear to have ‘opposite’
+behavior on the + and - strand. Using positions 5 and 6 as an example, 5 precedes 6 on the +
+strand but follows 6 on the - strand.
+The table below outlines the orientation when ranges on different strands are compared. In
+general, a feature on * is considered to belong to both strands. The single exception is when
+both x and subject are * in which case both are treated as +.
+
+|  x  | subject | orientation                                               |
+| :-: | :-----: | :-------------------------------------------------------- |
+|  +  |    +    | --->                                                      |
+|  +  |    -    | NA                                                        |
+|  +  |    \*   | --->                                                      |
+|  -  |    +    | NA                                                        |
+|  -  |    -    | <---                                                      |
+|  -  |    \*   | <---                                                      |
+|  \* |    +    | --->                                                      |
+|  \* |    -    | <---                                                      |
+|  \* |    \*   | ---> (the only situation where `*` arbitrarily means `+`) |
 
 ## Set Operations on Ranges
 
@@ -255,7 +372,6 @@ hits_follow
 #| echo: true
 #| include: true
 # Create two more GRanges objects for set operations
-library(GenomicRanges)
 gr_a <- GRanges(
   seqnames = "chr1",
   ranges = IRanges(start = c(10, 20, 30), end = c(15, 25, 35))
@@ -268,12 +384,17 @@ gr_b <- GRanges(
 
 # Union of ranges
 union(gr_a, gr_b)
+plotGenomicTracks(list(gr_a=gr_a, gr_b=gr_b, union=union(gr_a, gr_b)))
+
+
 
 # Intersection of ranges
 intersect(gr_a, gr_b)
+plotGenomicTracks(list(gr_a=gr_a, gr_b=gr_b, intersect=intersect(gr_a, gr_b)))
 
 # Difference of ranges (ranges in gr_a that don't overlap with gr_b)
 setdiff(gr_a, gr_b)
+plotGenomicTracks(list(gr_a=gr_a, gr_b=gr_b, setdiff=setdiff(gr_a, gr_b)))
 ```
 
 # Working with GRangesList
